--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Personal Portfolio Web Page</title>
   
   
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
