--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p align="left">More than two decades ago my passion for computers and related technology began. At
       present my passion went to a whole new level as I take on the labyrinth of the new frontier by
       attempting to sort out what's important and what's not. The pacing may be fast but I know that
-      as a would be programmer I will find solutions hidden under bad ones.</p>
+      as a would be programmer I need to find solutions hidden under bad ones.</p>
       
     </div>
   </section>
