--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <head>
   <title>Personal Portfolio Web Page</title>
 </head>
-<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 
 <body>
 
