--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
   <section id="welsection">
-    <h1>Welcome to my on-the-web Portfolio</h1>
+    <h1>Welcome To My On-The-Web Portfolio</h1>
     <h4>Open source technology and the close source finally merge as one</h4>
   </section>
   <section id="abosection">
