--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <section id="welsection">
     <h1>Welcome To My On-The-Web Portfolio</h1>
     <h4>Open source technology and the close source finally merge as one</h4>
+    <h4>The Synergy of Opposing Technologies</h4>
   </section>
   <section id="abosection">
     <div class="block">
