--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/romdom.css">
 
   
 </head>
